--- a/packages/components/auth/package.json
+++ b/packages/components/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-@tethys/auth",
+  "name": "test-huan-auth",
   "version": "0.0.0",
   "description": "",
   "author": "",
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://github.com/huanhuanwa/lib"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
